--- a/tasks/src/2.Sushi/2.1.Navigation.md
+++ b/tasks/src/2.Sushi/2.1.Navigation.md
@@ -18,6 +18,19 @@
 Контейнер `Pages` должен отображать текущую страницу.
 3. Сделай так, чтобы `App` использовал созданные контейнеры, а не компоненты.
 
+Пример создания провайдера:
+```js
+import { Provider } from 'react-redux';
+
+function App({store}) {
+  return (
+    <Provider store={store}>
+      <RootComponent />
+    </Provider>
+  );
+}
+```
+
 Пример создания контейнера:
 ```js
 import React from 'react';
