--- a/tasks/src/2.Sushi/2.4.Cart.md
+++ b/tasks/src/2.Sushi/2.4.Cart.md
@@ -15,6 +15,7 @@ const action = {
 Добавь `onDecrease`, `onIncrease`, которые используют `changePurchaseQuantity`
 для уменьшения или увеличения размера покупки на единицу.
 Добавь `onPay` для перехода на страницу корзины с помощью `navigateTo`.
+В качестве параметра `navigateTo` передай `Page.cart`.
 Когда на следующем шаге правильно напишешь редьюсер, кнопки на карточке продукта заработают.
 
 3. Пусть каждая  покупка в корзине представляет собой объект вида `{id, quantity}`,
