--- a/tasks/src/2.Sushi/2.6.Orders.md
+++ b/tasks/src/2.Sushi/2.6.Orders.md
@@ -24,8 +24,8 @@ function ordersReducer(state = [], action) {
 - `onNavigateToMenu` на основании dispatch
 Сделай так, чтобы в компоненте `Pages` использовался контейнер `Orders` вместо компонента `Orders`.
 
-5. Действие `ORDER` должно производить несколько эффектов: переносить содержимое `products` в `orders`
-в виде элемента в начало массива, после чего в `products` присваивать пустой массив, а затем открывать страницу заказов.
+5. Действие `ORDER` должно производить несколько эффектов: переносить содержимое `purchases` в `orders`
+в виде элемента в начало массива, после чего в `purchases` присваивать пустой массив, а затем открывать страницу заказов.
 Все это должно происходить только если в корзине что-то было.
 Но чтобы это сделать нужно задействовать сразу три слайса: `page`, `purchases`, `orders`,
 причем `orders` будет меняться в соответствие со значением `purchases`.
