--- a/tasks/src/2.Sushi/2.5.Refactoring.md
+++ b/tasks/src/2.Sushi/2.5.Refactoring.md
@@ -1,14 +1,13 @@
 В этом задании нужно провести рефакторинг редьюсера, пока он не слишком разбух!
 
-1. Разбей `rootReducer` на следующие slice-редьюсеры:  `pageReducer`, `productsReducer`, `purchasesReducer`.
+1. Разбей `rootReducer` на slice-редьюсеры:  `pageReducer`, `productsReducer`.
 Каждый из них должен обрабатывать изменения только в одном из ключей полного состояния.
 В итоге должно получиться что-то подобное:
 ```js
 export function rootReducer(state = {}, action) {
   return {
     page: pageReducer(state.page, action),
-    products: /* ... */,
-    /* ... */
+    products: /* ... */
   }
 }
 
@@ -25,30 +24,20 @@ function pageReducer(state = Page.menu, action) {
 Только кусочек передается на вход в качестве state, только кусочек возвращается в return,
 только кусочек инициализируется slice-редьюсером по умолчанию. А кусочки объединяются в `rootReducer`.
 Во время рефакторинга придется поправить все case-функции. Но заметь, что они от этого только станут проще!
-Особенно `changePurchaseQuantity`. Разбиение на слайсы делает код проще!
+Убедись, что после рефакторинга приложение работает как и прежде.
 
 2. Так как после рефакторинга состояние по умолчанию создается по кусочкам в slice-редьюсерах, удали `defaultState`.
-Заметь, что в `rootReducer` state все же над инициализировать пустым объектом!
+Заметь, что в `rootReducer` state все же надо инициализировать пустым объектом!
 
 3. Код `rootReducer` сейчас довольно прост. Но воспользуйся `combineReducers` из `redux`, чтобы сделать его еще проще.
-Подключается так: `import { combineReducers } from 'redux';`
+Подключается так:
+```js
+import { combineReducers } from 'redux';
+```
 Код редьюсера будет выглядеть примерно так:
 ```js
 export const rootReducer = combineReducers({
   page: pageReducer,
-  products: /* ... */,
-  /* ... */
-});
-```
-Можно еще проще, если имя slice-редьюсера будет совпадать с именем слайса:
-```js
-function page(state, action) { /* ... */ }
-function products(state, action) { /* ... */ }
-/* ... */
-
-export rootReducer = combineReducers({
-  page,
-  products,
   /* ... */
 });
 ```
@@ -56,14 +45,17 @@ export rootReducer = combineReducers({
 4. Если обработка каждого действия происходит в отдельной case-функции,
 то можно не писать редьюсер со `switch`, а воспользоваться объектом с case-функциями.
 Проще всего создать такой редьюсер с помощью `createReducer` из пакета `redux-create-reducer`:
-`import { createReducer } from 'redux-create-reducer';`
+```js
+import { createReducer } from 'redux-create-reducer';
+```
 Создание редьюсера будет выглядеть примерно так:
 ```js
-const pageReducer = createReducer(Page.menu, {
+const page = createReducer(Page.menu, {
   [actionTypes.NAVIGATE_TO_PAGE]: (state, action) => action.page
 });
 ```
-Сделай так, чтобы вы slice-редьюсеры создавались с помощью createReducer.
+Сделай так, чтобы вы slice-редьюсеры создавались с помощью `createReducer`.
+Убедись, что после рефакторинга приложение работает как и прежде.
 
-5. Теперь код редьюсеров стал проще, его даже можно разделить по файлам и переиспользовать.
-А приложение продолжает работать!
+5. Теперь код редьюсеров стал проще, а еще его даже можно разделить по файлам.
+Но чтобы не тратить сейчас на это время пойдем дальше.
