--- a/tasks/src/2.Sushi/2.1.Navigation.md
+++ b/tasks/src/2.Sushi/2.1.Navigation.md
@@ -13,10 +13,7 @@
 
 Эту связь надо установить:
 1. Добавь `Provider` из `react-redux` в компонент `App` в `index.js`
-2. В папке `containers` создай файлы `Navigation.js` и `Pages.js`, а в них контейнеры.
-Контейнер `Navigation` должен переключать страницу с помощью `navigateTo` и подсвечивать текущую.
-Контейнер `Pages` должен отображать текущую страницу.
-3. Сделай так, чтобы `App` использовал созданные контейнеры, а не компоненты.
+Модуль `react-redux` уже установлен, но не импортирован.
 
 Пример создания провайдера:
 ```js
@@ -30,6 +27,11 @@ function App({store}) {
   );
 }
 ```
+
+2. Создай папку `containers`, в ней создай файлы `Navigation.js` и `Pages.js`,
+а в них контейнеры для соответствующих компонентов.
+Контейнер `Navigation` должен переключать страницу с помощью `navigateTo` и подсвечивать текущую.
+Контейнер `Pages` должен отображать текущую страницу.
 
 Пример создания контейнера:
 ```js
@@ -47,3 +49,7 @@ export default connect(
   })
 )(Timer);
 ```
+
+3. Сделай так, чтобы `App` использовал созданные контейнеры, а не компоненты.
+Не забудь убрать передачу ненужных контейнерам props.
+
