Tasks and slides are updated

--- a/tasks/src/1.Sandglass/1.Sandglass.md
+++ b/tasks/src/1.Sandglass/1.Sandglass.md
@@ -4,7 +4,7 @@
 Просто создай `appStore` с помощью `createStore` из Redux и используй импортированный `timerReducer`.
 
 2. `timerReducer`, а также пару action creator'ов `changeSeconds` и `restart` еще предстоит написать.
-Так как `timerReducer` - это чистая функция, то ее удобно тестировать модульно.
+Так как `timerReducer` — это чистая функция, то ее удобно тестировать модульно.
 Все необходимые тесты уже есть: запускай с помощью команды `npm run test-sandglass` в терминале.
 Реализуй `timerReducer`, `changeSeconds` и `restart` так, чтобы тесты проходили.
 Выдели значения type'ов действий в качестве const в начале файла.
@@ -18,14 +18,16 @@
 Для этого вызови `this.props.store.subscribe` со своим обработчиком (подойдет стрелочная функция без параметров).
 Наконец, отпишись от обновлений состояния в `componentWillUnmount`.
 Для этого вызови функцию, которую возвращает `subscribe`.
+Убедись, что таймер отрисовывается и реагирует на нажатия кнопок «минус» и «плюс».
 
 4. Визуализация состояния может происходить разными способами.
 Пусть приложение сразу после `Timer` отрисовывает компонент `Sandglass`, также передавая ему секунды из `state`.
+Убедись, что под таймером появились песочные часы и количество песка в них соответствует времени на таймере.
 
 5. Изменения состояния приложения могут происходить вне React.
 Сделай так, чтобы каждые 250 мс поисходил `dispatch` с `changeSeconds(-0.25)`. Для этого тебе пригодится `setInterval`.
-Теперь даже без нажатий на кнопки время потихоньку тикает.
+Убедись, что после сделанных изменений, даже без нажатий на кнопки оставшееся время уменьшается.
 
 6. Изменения состояния могут происходить из-за разных действий.
 Добавь под песочные часы кнопку `RoundButton`, в качестве `content` используй `RESTART_SIGN`.
-Нажатие на получившуюся кнопку должно стартовать отсчет времени заново.
+Нажатие на получившуюся кнопку должно стартовать отсчет времени заново. Убедись, что это так.
