--- a/tasks/src/2.Sushi/2.3.Menu.md
+++ b/tasks/src/2.Sushi/2.3.Menu.md
@@ -1,17 +1,19 @@
 В этом задании нужно сделать так, чтобы список продуктов брался из store.
 
 Сейчас `Menu` показывает только пару продуктов. А вот в `preloadedState` в `index.js` есть коллекция всех продуктов.
-Добейся, чтобы в меню отображались все продукты, выполнив следующие шаги.
+Выполни следующие шаги, чтобы в меню отображались все продукты.
 
-1. Создай контейнер `Product`. Он должен принимать идентификатор продукта через props,
-находить product в коллекции из state (из store) и передавать в компонент `Product`.
+1. Создай контейнер `Product`. Он должен:
+- Принимать идентификатор продукта `productId` через props
+- Находить product в коллекции `products` из state (из store) по идентификатору
+- Передавать `product` в компонент `Product`.
 Пока не требуется передавать в компонент `Product` свойства `purchase`, `onDecrease`, `onIncrease`, `onPay`.
 
-2. Измени компонент `Menu` так, чтобы он принимал `productIds` через props.
-Сделай так, чтобы он отрисовывал продукты по списку идентификаторов, а не заданные изначально.
-Отрисовка продукта в `Menu` должна выглядеть примерно так:
-`<Product key={productId} productId={productId} />`.
-Причем должен использоваться контейнер `Product`, а не компонент: не забудь поправить import.
+2. Измени компонент `Menu` так, чтобы он принимал `productIds` через props. Не забудь поправить `Menu.propTypes`.
+Поправь import компонента Product, чтобы вместо компонента использовался только что созданный контейнер.
+Сделай так, чтобы компонент `Menu` отрисовывал продукты по списку идентификаторов, а не заданные изначально.
+Так как контейнер `Product` сам найдет определение продукта по идентификатору, отрисовка продукта в `Menu`
+должна выглядеть примерно так: `<Product key={productId} productId={productId} />`.
 
 3. Создай контейнер `Menu`. Он просто должен доставать идентификаторы всех продуктов из state (из store)
 и передвать компоненту `Menu` в качестве `productIds`.
