--- a/tasks/src/2.Sushi/2.6.Filter.md
+++ b/tasks/src/2.Sushi/2.6.Filter.md
@@ -1,5 +1,5 @@
-В этом задании нужно добавить возможность фильтрации меню. Причем список отфильтрованных блюд будет браться через api.
-Для этого маленького приложения это избыточно: меню можно было отфильтровать прямо в браузере, но через api интереснее.
+В этом задании нужно добавить возможность фильтрации меню. Причем список отфильтрованных блюд будет браться через API.
+Для этого маленького приложения это избыточно: меню можно было отфильтровать прямо в браузере, но через API интереснее.
 
 1. Прежде всего у нас появится новый слайс `chosenProducts` в состоянии приложения.
 Вот его начальные значения:
@@ -18,24 +18,25 @@ const sliceState = {
   status: Status.loaded
 }
 ```
-Создай новый `chosenProductsReducer` для слайса `chosenProducts`,
-пропиши в нем корректное начальное состояние и передай его в `combineReducers`.
+Создай редьюсер для слайса `chosenProducts`,
+пропиши в нем корректное начальное состояние и подключи его в `combineReducers`.
 Пока он не должен обрабатывать никакие действия.
 
-2. Добавь новый тип действия `CHANGE_PRODUCT_TAG` для обновления галочек в фильтре.
+2. Добавь новый тип действия `CHANGE_PRODUCT_TAG` для обновления галочек в фильтре в `actionTypes/index.js`
 
-3. Сделай так, чтобы галочки в фильтрах меню можно было переключать.
-  - Добавь `changeProductTag` в `actionCreators/index.js`, создающее действие с такой структурой:
+3. Выполни следующие пункты, чтобы галочки в фильтрах меню можно было переключать.
+  - Добавь `changeProductTag` в `actionCreators/index.js`:
   ```js
-  const action = {
+  export const changeProductTag = productTag => ({
     type: actionTypes.CHANGE_PRODUCT_TAG,
     productTag
-  }
+  });
   ```
   - Создай контейнер `MenuFilter`, который задает `chosenTags` из `state.chosenProducts.tags`
-  и на `onChange` диспатчится `changeProductTag`
+  и на `onChange` диспатчится `changeProductTag`. За основу можешь взять контейнер `Navigation`.
   - Используй контейнер `MenuFilter` в компоненте `Menu`
-  - Добавь вот такую case-функцию `changeProductTag` для `chosenProductsReducer`:
+  - Добавь вот такую case-функцию `changeProductTag` и подключи ее как обработчик действия
+  с типом `CHANGE_PRODUCT_TAG` в редьюсер слайса `chosenProducts`:
   ```js
   function changeProductTag(state, { productTag }) {
     const tags = state.tags.some(t => t === productTag)
@@ -96,7 +97,7 @@ function getProductIds(products, chosenProducts) {
   - `LOAD_BY_TAGS_SUCCESS` для отображения отфильтрованных продуктов после успеха
   - `LOAD_BY_TAGS_FAILURE` для обработки ошибок запроса отфильтрованных продуктов
 
-6. Добавь и подключи case-функции для обработки новых действий:
+6. Добавь и подключи case-функции для обработки новых действий к редьюсеру:
 ```js
 // после запроса нужно показать лоадер, а для этого поменять состояние
 function loadByTagsRequest(state, action) {
@@ -106,7 +107,7 @@ function loadByTagsRequest(state, action) {
   };
 }
 
-// в случае успеха загруженные идентификаторы сохраняются
+// в случае успеха загруженные идентификаторы надо сохранить
 function loadByTagsSuccess(state, { productIds }) {
   return {
     ...state,
@@ -126,11 +127,11 @@ function loadByTagsFailure(state, { productIds }) {
 }
 ```
 
-7. Надо сделать так, чтобы обновление галочек в фильтрах приводило к вызову `api.fetchProductIdsByTags`.
-Для этого можно изменить логику контейнера `MenuFilter` так, чтобы после изменения галочки
-она менялась визуально как уже сделано, а затем вызывался `fetchProductIdsByTags`,
-причем после успешного вызова диспатчилось действие `LOAD_BY_TAGS_SUCCESS`.
-Примерно так:
+7. Наконец, самое важное. Надо сделать так, чтобы обновление галочек в фильтрах
+приводило к вызову `api.fetchProductIdsByTags`, чтобы API вернуло список продуктов в соответствие с фильтром.
+Для этого можно изменить логику контейнера `MenuFilter` так, чтобы после обновления галочки
+вызывался `fetchProductIdsByTags`, а после успешного завершения запроса диспатчилось действие `LOAD_BY_TAGS_SUCCESS`.
+Примерно так (не спеши копировать этот код, он нерабочий):
 ```js
 connect(
   (state, props) => ({
@@ -141,7 +142,7 @@ connect(
       dispatch(changeProductTag(productTag));
 
       dispatch({ type: actionTypes.LOAD_BY_TAGS_REQUEST });
-      api.fetchProductIdsByTags(chosenTags).then(productIds => {
+      api.fetchProductIdsByTags(tags).then(productIds => {
         dispatch({
           type: actionTypes.LOAD_BY_TAGS_SUCCESS,
           productIds: productIds
@@ -151,7 +152,7 @@ connect(
   })
 )(MenuFilter);
 ```
-Только у этого кода много проблем:
+У этого кода много проблем:
   - Откуда взять `api`? Api создается на уровне приложения в `index.js`
   - Чтобы вызвать `fetchProductIdsByTags` нужно передать все `chosenTags`,
   а не только `productTag`, текущее значение одной из галочек.
@@ -162,9 +163,12 @@ connect(
 8. Красивое решение описанных проблем — redux-thunk.
 Это middleware, который позволяет передавать функции, порождающие действия, вместо действий.
 Причем этим функциям доступны `getState` и `dispatch` и дополнительный аргумент.
-  - Импортируй `thunk` из `redux-thunk`
+  - Импортируй `thunk` из `redux-thunk` в `index.js`:
+  ```js
+  import thunk from 'redux-thunk';
+  ```
   - Добавь `thunk.withExtraArgument(api)` первым параметром в `applyMiddleware`
-Теперь поменяй тривиальную реализацию `changeProductTag` на такую:
+Теперь поменяй тривиальную реализацию `changeProductTag` в `actionCreators/index.js` на такую:
 ```js
 export const changeProductTag = productTag => (dispatch, getState, api) => {
   dispatch({
@@ -173,13 +177,17 @@ export const changeProductTag = productTag => (dispatch, getState, api) => {
   });
 };
 ```
-В этой реализации доступно все, что нужно, чтобы сделать запрос к api, своевременно обновляя state.
+В этой реализации, которая будет обработана thunk middleware, доступно все необходимое, чтобы сделать запрос к API.
+Перед тем, как переходить к следующему шагу убедись, что галочки переключаются.
 
-9. Сделай так, чтобы `changeProductTag` создавал действия переключение галочки,
-а затем уведомлял о начале загрузки, производил загрузку через `api`
-и создавал действие успешной загрузки с полученными `productIds`.
+9. Сделай так, чтобы `changeProductTag` выполнял последовательно следующее:
+  - создавал действие переключение галочки (уже делает)
+  - уведомлял о начале загрузки (`LOAD_BY_TAGS_REQUEST`)
+  - производил загрузку через `api`
+  - создавал действие успешной загрузки с полученными `productIds` (`LOAD_BY_TAGS_SUCCESS`)
 Другими словами все то, что выше предлагалось сделать в контейнере `MenuFilter`.
-Убедись, что фильтры работают.
+Кстати, код неудачной версии `MenuFilter` удобно взять за основу новой версии `changeProductTag`.
+После убедись, что фильтры полностью работают.
 
 10. С Promise в JavaScript можно работать удобнее, если использовать async/await
 Добавь слово `async`  в заголовок `changeProductTag`:
@@ -195,9 +203,9 @@ const productIds = await api.fetchProductIdsByTags(tags);
 await api.sendMetric('changeProductTag', 'done');
 ```
 
-11. Запросы к api могут заканчиваться ошибками и их надо обрабатывать.
+11. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
 Чтобы просимулировать это замени вызов `fetchProductIdsByTags` на `fetchProductIdsByTagsUnstable`.
-Нестабильный метод api падает в половине случаев.
+Нестабильный метод API падает в половине случаев.
 Теперь если несколько раз переключить фильтр, появится ошибка в консоли и бесконечный лоадер.
 В случае использования async/await удобно обрабатывать ошибки: надо просто обернуть код в try-catch.
 Оберни `fetchProductIdsByTagsUnstable` в try, а catch напиши так:
@@ -210,11 +218,12 @@ catch (error) {
 ```
 Теперь в случае возникновения ошибки фильтры будут сбрасываться.
 
-12. Функция `changeProductTag` сейчас довольно большая из нее стоит выделить часть, которая относится непосредственно к загрузке.
+12. Функция `changeProductTag` сейчас довольно большая из нее стоит выделить часть,
+которая относится непосредственно к загрузке.
 Если сделать у этой функции сигнатуру как у thunk, то ее можно будет передавать в dispatch:
 ```js
 // заглушка под функцию
-const loadByTags = () => async (dispatch, getState, api) => () {
+const loadByTags = () => async (dispatch, getState, api) => {
   /* ... */
 };
 
@@ -224,5 +233,5 @@ await dispatch(loadByTags());
 Такая сигнатура возволит использовать `loadByTags` отдельно от `changeProductTag` как action creator.
 Выдели и используй `loadByTags`. `sendMetric` должен остаться вне `loadByTags`.
 Обрати внимание, что благодаря использованию `redux-thunk`, `dispatch` возвращает Promise.
-Поэтому можно использовать `await`, чтобы дождаться окончания выполнения `loadByTags`.
-А затем отправить метрики. Таким образом метрики будут отправляться после окончания запроса, как и было раньше.
+Поэтому можно использовать `await`, чтобы дождаться окончания выполнения `loadByTags`. А затем отправить метрики.
+Таким образом метрики будут отправляться после окончания запроса, как и было раньше.
