--- a/tasks/src/2.Sushi/2.7.Cart.md
+++ b/tasks/src/2.Sushi/2.7.Cart.md
@@ -1,28 +1,79 @@
 В этом задании нужно сделать добавление в корзину и страницу корзины.
 
-1. Чтобы добавлять продукты в корзину понадобится новое действие со следущей структурой:
+1. Чтобы добавлять продукты в корзину понадобится новое действие.
+  - Добавь в `actionTypes/index.js`:
+  ```js
+  export const CHANGE_PURCHASE_QUANTITY = 'CHANGE_PURCHASE_QUANTITY';
+  ```
+  - Добавь в `actionCreators/index.js`:
+  ```js
+  export const changePurchaseQuantity = (productId, value) => ({
+    type: actionTypes.CHANGE_PURCHASE_QUANTITY,
+    productId,
+    value
+  });
+  ```
+
+
+2. Чтобы можно было увидеть результат как только будет написан редьюсер, обнови контейнер `Product`:
 ```js
-const action = {
-  type: actionTypes.CHANGE_PURCHASE_QUANTITY,
-  productId,
-  value
-}
+import React from 'react';
+import { connect } from 'react-redux';
+import Product from '../components/Product';
+import Page from '../constants/Page';
+import { changePurchaseQuantity, navigateTo } from '../actionCreators';
+
+export default connect(
+  (state, props) => ({
+    product: state.products.byId[props.productId],
+    purchase: (state.purchases || []).find(p => p.id === props.productId)
+  }),
+  (dispatch, props) => ({
+    onDecrease: () => dispatch(changePurchaseQuantity(props.productId, -1)),
+    onIncrease: () => dispatch(changePurchaseQuantity(props.productId, 1)),
+    onPay: () => dispatch(navigateTo(Page.cart))
+  })
+)(Product);
+
 ```
-Добавь необходимый код для создания действия. А редьюсер обновишь далее.
 
-2. Чтобы можно было увидеть результат сразу обнови контейнер `Product`.
-Добавь туда `purchase`, вычисляющееся по состоянию так `state.purchases.find(p => p.id === props.productId)`.
-Добавь `onDecrease`, `onIncrease`, которые используют `changePurchaseQuantity`
-для уменьшения или увеличения размера покупки на единицу.
-Добавь `onPay` для перехода на страницу корзины с помощью `navigateTo`.
-В качестве параметра `navigateTo` передай `Page.cart`.
-Когда на следующем шаге правильно напишешь редьюсер, кнопки на карточке продукта заработают.
 
-3. Пусть каждая  покупка в корзине представляет собой объект вида `{id, quantity}`,
+3. Также создай контейнер `Cart`:
+```js
+import React from 'react';
+import { connect } from 'react-redux';
+import Cart from '../components/Cart';
+import Page from '../constants/Page';
+import { changePurchaseQuantity, navigateTo } from '../actionCreators';
+
+export default connect(
+  (state, props) => ({
+    productsById: state.products.byId,
+    productsStatus: state.products.status,
+    purchases: state.purchases
+  }),
+  (dispatch, props) => ({
+    onDecreaseById: productId =>
+      dispatch(changePurchaseQuantity(productId, -1)),
+    onIncreaseById: productId => dispatch(changePurchaseQuantity(productId, 1)),
+    onNavigateToMenu: () => dispatch(navigateTo(Page.menu))
+  })
+)(Cart);
+
+```
+Сделай так, чтобы в компоненте `Pages` использовался контейнер `Cart` вместо компонента `Cart`.
+
+
+4. Подготовка окончена. Теперь самостоятельно напиши редьюсер для корзины.
+Пусть слайс корзины называется `purchases`.
+Пусть каждая  покупка в корзине представляет собой объект вида `{id, quantity}`,
 где id — идентификатор продукта, а quantity — заказанное количество.
 Пример состояния с парой покупок:
 ```js
-const stateWithPurchases = {
+const appStateWithPurchasesExample = {
+  page: /* ... */
+  products: /* ... */
+  chosenProducts: /* ... */
   purchases: [
     {
       id: 1,
@@ -35,17 +86,12 @@ const stateWithPurchases = {
   ]
 };
 ```
-Добавь в редьюсер обработку case-функцию `changePurchaseQuantity` для обработки `CHANGE_PURCHASE_QUANTITY`.
-Если продукта в корзине еще нет, то в массив `purchases` должен добавляться новый элемент,
-иначе меняться quantity содержащегося элемента. Не забудь пересоздать родительские узлы покупки (immutable-стиль).
-Покупки не должны повторяться, а значение quantity не должно быть меньше 0.
+В редьюсере надо обрабатывать `CHANGE_PURCHASE_QUANTITY` следующим образом:
+- если продукта в корзине еще нет, то в массив `purchases` должен добавляться новый элемент
+- если продукт в корзине есть, то должно меняться `quantity` для этого продукта
+- покупки не должны повторяться, а значение `quantity` не должно быть меньше 0
+Не забудь пересоздать родительские узлы изменяемой покупки (immutable-стиль).
 
-4. Пришло время добавить страницу корзины. Компонент `Cart` уже написал.
-Осталось добавить контейнер `Cart` и использовать его.
-Контейнер должен передавать в компонент следующие пропсы:
-- `productsById`, `productsStatus`, `purchases` на основании state
-- `onDecreaseById`, `onIncreaseById`, `onNavigateToMenu` на основании dispatch
-А вот `onOrder` пока передавать не надо.
 
 5. Теперь на страницах меню и корзины должно быть можно изменять заказ,
-а также должна работать навигация между меню и корзиной.
+а также должна работать навигация корзиной и меню, если корзина пуста.
