--- a/tasks/src/2.Sushi/2.8.Orders.md
+++ b/tasks/src/2.Sushi/2.8.Orders.md
@@ -1,50 +1,75 @@
 В этом задании нужно сделать добавление заказа в список заказов.
 
-1. Чтобы добавлять заказ понадобится новое действие:
-```js
-const action = {
-  type: actionTypes.ORDER
-}
-```
-Добавь необходимый код для создания действия. Редьюсер добавишь в конце.
+1. Чтобы добавлять заказ понадобится новое действие.
+  - Добавь в `actionTypes/index.js`:
+  ```js
+  export const ORDER = 'ORDER';
+  ```
+  - Добавь в `actionCreators/index.js`:
+  ```js
+  export const order = () => ({
+    type: actionTypes.ORDER
+  });
+  ```
 
-2. Измени контейнер `Cart`. Добавь обработчик `onOrder`, который будет создавать действие `ORDER`.
 
-3. Добавь в `rootReducer` тривиальный `ordersReducer`, управляющий слайсом `orders`.
+2. Измени контейнер `Cart`. Добавь обработчик `onOrder`, который будет диспатчить действие `ORDER`.
+
+
+3. Подключи к `rootReducer` тривиальный `ordersReducer`, управляющий слайсом `orders`.
 Вот его код:
 ```js
-function ordersReducer(state = [], action) {
-  return state;
-}
+const ordersReducer = createReducer([], {});
 ```
 
-4. Создай контейнер `Orders`.
-Контейнер должен передавать в компонент следующие пропсы:
-- `productsById`, `productsStatus`, `orders` на основании state
-- `onNavigateToMenu` на основании dispatch
+
+4. Создай контейнер `Orders`:
+```js
+import React from 'react';
+import { connect } from 'react-redux';
+import Page from '../constants/Page';
+import { changePurchaseQuantity, navigateTo } from '../actionCreators';
+import Orders from '../components/Orders';
+
+export default connect(
+  (state, props) => ({
+    productsById: state.products.byId,
+    productsStatus: state.products.status,
+    orders: state.orders
+  }),
+  (dispatch, props) => ({
+    onNavigateToMenu: () => dispatch(navigateTo(Page.menu))
+  })
+)(Orders);
+
+```
 Сделай так, чтобы в компоненте `Pages` использовался контейнер `Orders` вместо компонента `Orders`.
+
 
 5. Действие `ORDER` должно производить несколько эффектов: переносить содержимое `purchases` в `orders`
 в виде элемента в начало массива, после чего в `purchases` присваивать пустой массив, а затем открывать страницу заказов.
 Все это должно происходить только если в корзине что-то было.
-Но чтобы это сделать нужно задействовать сразу три слайса: `page`, `purchases`, `orders`,
-причем `orders` будет меняться в соответствие со значением `purchases`.
+Но чтобы это сделать нужно задействовать сразу три слайса: `page`, `purchases`, `orders`.
+Причем `orders` будет меняться в соответствие со значением `purchases`.
 Обычные slice-редьюсеры не смогут произвести такое обновление. Поэтому следует создать `crossSliceReducer`,
 который будет обрабатывать действия, затрагивающие несколько слайсов.
 `crossSliceReducer` создается так:
 ```js
 const combinedReducer = combineReducers(/* ... */);
 
-function crossSliceReducer(state, action) {
+const crossSliceReducer = (state, action) => {
   /* НАПИСАТЬ КОД ТУТ */
+  return state;
 }
 
-export function rootReducer(state, action) {
+export const rootReducer = (state, action) => {
   const intermediateState = combinedReducer(state, action);
   const finalState = crossSliceReducer(intermediateState, action);
   return finalState;
 }
+
 ```
 Напиши правильную обработку действия `ORDER` в `crossSliceReducer`.
+
 
 6. Теперь кнопка «Заказать» должна переносить содержимое корзины на страницу заказов и показывать ее.
