--- a/tasks/src/2.Sushi/2.4.Api.md
+++ b/tasks/src/2.Sushi/2.4.Api.md
@@ -6,30 +6,21 @@
 Action из `loadProductsRequest` должен содержать только тип,
 а `loadProductsSuccess` должен также передавать products.
 
-3. Сделай так, чтобы в `createStore` больше не передавался `preloadedState`. После этого меню должно стать пустым.
+3. Сделай так, чтобы в `createStore` больше не передавался `preloadedState`: просто удали этот параметр.
+После этого меню должно стать пустым.
 
 4. Используй `api.fetchProducts()` в `componentDidMount` компонента `App`,
 чтобы получить продукты и записать их в `store`.
-Перед вызовом надо создать action с типом `LOAD_PRODUCTS_REQUEST`,
-а после успешного выполнения с `LOAD_PRODUCTS_SUCCESS`.
-Используй написанные action creators.
+Перед вызовом надо создать action с типом `LOAD_PRODUCTS_REQUEST` и передать его в `dispatch`,
+а после успешного выполнения создать action с типом `LOAD_PRODUCTS_SUCCESS` и также передать его в `dispatch`.
+Используй написанные action creators. `dispatch` в данном случае возьми напрямую из `store`.
+Проверь с помощью `redux-logger`, что события начала и окончания загрузки происходят.
 
 5. Чтобы продукты снова стали отображаться осталось добавить обработку действий в `rootReducer`.
 И тут стоит обратить внимание на две детали.
 Во-первых, если писать код обработки всех действий в одной функции, она станет слишком большой.
 Поэтому часто обработку каждого конкретного действия переносят в отдельную функцию, так называемую case-функцию.
-Во-вторых, надо не забывать обновлять состояние в immutable-стиле, как показано в примере ниже.
-Итак, добавь в `rootReducer` обработку `LOAD_PRODUCTS_REQUEST` и `LOAD_PRODUCTS_SUCCESS`.
-При `LOAD_PRODUCTS_REQUEST` должен появляться лоадер.
-При `LOAD_PRODUCTS_SUCCESS` лоадер должен скрываться, а продукты показываться.
-Подсказка: Код для преобразования массива продуктов в `allIds` и `byId` можно найти в `index.js`.
-
-6. Теперь на странице меню снова должны появляться все блюда, но с задержкой.
-`preloadedState` больше не нужен. Удали его из `index.js`.
-В контейнере `Menu` допиши передачу пропса `productsStatus` в компонент.
-Пусть значение берется из `products.status` из `store`.
-Теперь во время загрузки должен появляться лоадер в виде облачка.
-
+Во-вторых, надо обновлять состояние в immutable-стиле, как показано в примере ниже.
 
 Case-функция для обработки `LOAD_PRODUCTS_REQUEST` с обновлением `state` в immutable-стиле:
 ```js
@@ -43,3 +34,12 @@ function loadProductsRequest(state, action) {
   };
 }
 ```
+
+Итак, добавь в `rootReducer` обработку `LOAD_PRODUCTS_REQUEST` и `LOAD_PRODUCTS_SUCCESS` с помощью case-функций.
+Подсказка: Код для преобразования массива продуктов в `allIds` и `byId` можно найти в `index.js`.
+Когда закончишь, на странице меню снова должны появляться все блюда, но с задержкой.
+`preloadedState` больше не нужен. Удали его из `index.js`.
+
+7. В контейнере `Menu` допиши передачу пропса `productsStatus` в компонент.
+Пусть значение берется из `products.status` из `state`.
+Теперь во время загрузки должен появляться лоадер в виде облачка, а после загрузки исчезать.
