--- a/tasks/src/1.Sandglass/1.Sandglass.md
+++ b/tasks/src/1.Sandglass/1.Sandglass.md
@@ -5,7 +5,7 @@
 
 2. `timerReducer`, а также пару action creator'ов `changeSeconds` и `restart` еще предстоит написать.
 Так как `timerReducer` — это чистая функция, то ее удобно тестировать модульно.
-Все необходимые тесты уже есть: запускай с помощью команды `npm run test-sandglass` в терминале.
+Все необходимые тесты уже есть: запускай с помощью команды `npm test` в терминале.
 Реализуй `timerReducer`, `changeSeconds` и `restart` так, чтобы тесты проходили.
 Выдели значения type'ов действий в качестве const в начале файла.
 Разбивать `timerReducer` на несколько файлов не нужно.
