--- a/tasks/src/2.Sushi/2.6.Filter.md
+++ b/tasks/src/2.Sushi/2.6.Filter.md
@@ -198,9 +198,9 @@ export const changeProductTag = productTag => async (dispatch, getState, api) =>
 ```js
 const productIds = await api.fetchProductIdsByTags(tags);
 ```
-Сделай это, а затем добавь «отправку метрик» после успешного завершения запроса:
+Сделай это, а затем добавь «отправку метрик» после завершения запроса:
 ```js
-await api.sendMetric('changeProductTag', 'done');
+await api.sendMetric('changeProductTag', 'used');
 ```
 
 11. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
@@ -233,5 +233,5 @@ await dispatch(loadByTags());
 Такая сигнатура возволит использовать `loadByTags` отдельно от `changeProductTag` как action creator.
 Выдели и используй `loadByTags`. `sendMetric` должен остаться вне `loadByTags`.
 Обрати внимание, что благодаря использованию `redux-thunk`, `dispatch` возвращает Promise.
-Поэтому можно использовать `await`, чтобы дождаться окончания выполнения `loadByTags`. А затем отправить метрики.
-Таким образом метрики будут отправляться после окончания запроса, как и было раньше.
+Поэтому можно использовать `await`, чтобы дождаться окончания выполнения `loadByTags`,
+а затем отправить метрики вне зависимости от успешности `loadByTags`.
