--- a/tasks/src/2.Sushi/2.7.Cart.md
+++ b/tasks/src/2.Sushi/2.7.Cart.md
@@ -94,4 +94,4 @@ const appStateWithPurchasesExample = {
 
 
 5. Теперь на страницах меню и корзины должно быть можно изменять заказ,
-а также должна работать навигация корзиной и меню, если корзина пуста.
+а также должна работать навигация из корзины в меню, если корзина пуста.
