--- a/tasks/src/2.Sushi/2.9.Orders.md
+++ b/tasks/src/2.Sushi/2.9.Orders.md
@@ -13,44 +13,24 @@
   ```
 
 
-2. Измени контейнер `Cart`. Добавь обработчик `onOrder`, который будет диспатчить действие `ORDER`.
-
-
-3. Подключи к `rootReducer` тривиальный `ordersReducer`, управляющий слайсом `orders`.
+2. Подключи к `rootReducer` тривиальный `ordersReducer`, управляющий слайсом `orders`.
 Вот его код:
 ```js
 const ordersReducer = createReducer([], {});
 ```
 
 
-4. Создай контейнер `Orders`:
-```js
-import React from 'react';
-import { connect } from 'react-redux';
-import Page from '../constants/Page';
-import { changePurchaseQuantity, navigateTo } from '../actionCreators';
-import Orders from '../components/Orders';
+3. Сделай так, чтобы обработчик `onOrder` в компоненте `Cart`, был привязан к действию `ORDER`.
 
-export default connect(
-  (state, props) => ({
-    productsById: state.products.byId,
-    productsStatus: state.products.status,
-    orders: state.orders
-  }),
-  (dispatch, props) => ({
-    onNavigateToMenu: () => dispatch(navigateTo(Page.menu))
-  })
-)(Orders);
 
-```
+4. Допиши компонент `Order`, создай контейнер `Orders`, чтобы получать необходимые компоненту данные.
 Сделай так, чтобы в компоненте `Pages` использовался контейнер `Orders` вместо компонента `Orders`.
 
 
-5. Действие `ORDER` должно производить несколько эффектов: переносить содержимое `purchases` в `orders`
-в виде элемента в начало массива, после чего в `purchases` присваивать пустой массив, а затем открывать страницу заказов.
+5. Действие `ORDER` должно производить несколько эффектов: переносить содержимое корзины в `orders`
+в виде элемента в начало массива, после чего корзина должна опустошаться, а затем открывать страницу заказов.
 Все это должно происходить только если в корзине что-то было.
-Но чтобы это сделать нужно задействовать сразу три слайса: `page`, `purchases`, `orders`.
-Причем `orders` будет меняться в соответствие со значением `purchases`.
+Но чтобы это сделать нужно задействовать сразу несколько слайсов.
 Обычные slice-редьюсеры не смогут произвести такое обновление. Поэтому следует создать `crossSliceReducer`,
 который будет обрабатывать действия, затрагивающие несколько слайсов.
 `crossSliceReducer` создается так:
