--- a/tasks/src/2.Sushi/2.7.UnstableFilter.md
+++ b/tasks/src/2.Sushi/2.7.UnstableFilter.md
@@ -1,57 +1,20 @@
-В этом задании нужно добавить возможность фильтрации меню. Причем список отфильтрованных блюд будет браться через API.
+В этом задании нужно добиться, чтобы меню реально фильтровалось. Строить список отфильтрованных блюд будем через API.
 Для этого маленького приложения это избыточно: меню можно было отфильтровать прямо в браузере, но через API интереснее.
 
-1. Прежде всего у нас появится новый слайс `chosenProducts` в состоянии приложения.
-Вот его начальные значения:
+После предыдущего задания в `state` появился слайс `chosenProducts` примерно такой структуры:
 ```js
-const defaultSliceState = {
-  tags: [],
-  ids: [],
-  status: Status.none
-}
-```
-В заполненном виде он может выглядеть так:
-```js
-const sliceState = {
-  tags: [ProductTag.hot, ProductTag.veg],
-  ids: [1, 5],
-  status: Status.loaded
-}
-```
-Создай редьюсер для слайса `chosenProducts`,
-пропиши в нем корректное начальное состояние и подключи его в `combineReducers`.
-Пока он не должен обрабатывать никакие действия.
-
-2. Добавь новый тип действия `CHANGE_PRODUCT_TAG` для обновления галочек в фильтре в `actionTypes/index.js`
-
-3. Выполни следующие пункты, чтобы галочки в фильтрах меню можно было переключать.
-  - Добавь `changeProductTag` в `actionCreators/index.js`:
-  ```js
-  export const changeProductTag = productTag => ({
-    type: actionTypes.CHANGE_PRODUCT_TAG,
-    productTag
-  });
-  ```
-  - Создай контейнер `MenuFilter`, который задает `chosenTags` из `state.chosenProducts.tags`
-  и на `onChange` диспатчится `changeProductTag`. За основу можешь взять контейнер `Navigation`.
-  - Используй контейнер `MenuFilter` в компоненте `Menu`
-  - Добавь вот такую case-функцию `changeProductTag` и подключи ее как обработчик действия
-  с типом `CHANGE_PRODUCT_TAG` в редьюсер слайса `chosenProducts`:
-  ```js
-  function changeProductTag(state, { productTag }) {
-    const tags = state.tags.some(t => t === productTag)
-      ? state.tags.filter(t => t !== productTag)
-      : [...state.tags, productTag];
-    return {
-      ...state,
-      tags
-    };
+const state = {
+  /* ... */
+  chosenProducts = {
+    tags: [ProductTag.hot, ProductTag.veg],
+    ids: [1, 5],
+    status: Status.loaded
   }
-  ```
-  После этого галочки в фильтре меню должны начать переключаться.
-  Заметь, что при переключении галочки в одном из фильтров, она автоматически переключается во втором.
+  /* ... */
+}
+```
 
-4. Сейчас меню всегда показывает полный список продуктов. Надо сделать так,
+1. Сейчас меню всегда показывает полный список продуктов. Надо сделать так,
 чтобы после успешной загрузки отфильтрованного списка продуктов, отображался он.
 Для этого надо изменить контейнер `Menu` вот так:
 ```js
@@ -69,22 +32,27 @@ export default connect(
 )(Menu);
 
 function getProductStatus(products, chosenProducts) {
+  // если идет загрузка — ждем
   if (
     chosenProducts.status === Status.loading ||
     products.status === Status.loading
   ) {
     return Status.loading;
   }
+  // загрузка не идет, а продукты загружены — можно показывать
   if (products.status === Status.loaded) {
     return Status.loaded;
   }
+  // ничего нет и не предполагается
   return Status.none;
 }
 
 function getProductIds(products, chosenProducts) {
+  // если загружен список отфильтрованных продуктов — используем его
   if (chosenProducts.status === Status.loaded) {
     return chosenProducts.ids;
   }
+  // если хотя бы обычный список продуктов загружен — используем его
   if (products.status === Status.loaded) {
     return products.allIds;
   }
@@ -92,12 +60,13 @@ function getProductIds(products, chosenProducts) {
 }
 ```
 
-5. Добавь новый типы действий:
+2. Добавь новый типы действий:
   - `LOAD_BY_TAGS_REQUEST` для запроса отфильтрованных продуктов
   - `LOAD_BY_TAGS_SUCCESS` для отображения отфильтрованных продуктов после успеха
   - `LOAD_BY_TAGS_FAILURE` для обработки ошибок запроса отфильтрованных продуктов
 
-6. Добавь и подключи case-функции для обработки новых действий к редьюсеру:
+
+3. Добавь и подключи case-функции для обработки новых действий к редьюсеру:
 ```js
 // после запроса нужно показать лоадер, а для этого поменять состояние
 function loadByTagsRequest(state, action) {
@@ -127,7 +96,8 @@ function loadByTagsFailure(state, { productIds }) {
 }
 ```
 
-7. Наконец, самое важное. Надо сделать так, чтобы обновление галочек в фильтрах
+
+4. Наконец, самое важное. Надо сделать так, чтобы обновление галочек в фильтрах
 приводило к вызову `api.fetchProductIdsByTags`, чтобы API вернуло список продуктов в соответствие с фильтром.
 Для этого можно изменить логику контейнера `MenuFilter` так, чтобы после обновления галочки
 вызывался `fetchProductIdsByTags`, а после успешного завершения запроса диспатчилось действие `LOAD_BY_TAGS_SUCCESS`.
@@ -141,7 +111,9 @@ connect(
     onChange: productTag => {
       dispatch(changeProductTag(productTag));
 
-      dispatch({ type: actionTypes.LOAD_BY_TAGS_REQUEST });
+      dispatch({
+        type: actionTypes.LOAD_BY_TAGS_REQUEST
+      });
       api.fetchProductIdsByTags(tags).then(productIds => {
         dispatch({
           type: actionTypes.LOAD_BY_TAGS_SUCCESS,
@@ -160,7 +132,8 @@ connect(
   хотя контейнер должен об этом только сообщать куда следует и не должен отвечать за дальнейшую обработку.
 Осознай все эти проблемы, а затем переходи к следующему шагу.
 
-8. Красивое решение описанных проблем — redux-thunk.
+
+5. Красивое решение описанных проблем — redux-thunk.
 Это middleware, который позволяет передавать функции, порождающие действия, вместо действий.
 Причем этим функциям доступны `getState` и `dispatch` и дополнительный аргумент.
   - Импортируй `thunk` из `redux-thunk` в `index.js`:
@@ -178,18 +151,20 @@ export const changeProductTag = productTag => (dispatch, getState, api) => {
 };
 ```
 В этой реализации, которая будет обработана thunk middleware, доступно все необходимое, чтобы сделать запрос к API.
-Перед тем, как переходить к следующему шагу убедись, что галочки переключаются.
+Перед тем, как переходить к следующему шагу убедись, что до сих пор галочки переключаются.
 
-9. Сделай так, чтобы `changeProductTag` выполнял последовательно следующее:
+
+6. Сделай так, чтобы `changeProductTag` выполнял последовательно следующее:
   - создавал действие переключение галочки (уже делает)
   - уведомлял о начале загрузки (`LOAD_BY_TAGS_REQUEST`)
   - производил загрузку через `api`
   - создавал действие успешной загрузки с полученными `productIds` (`LOAD_BY_TAGS_SUCCESS`)
 Другими словами все то, что выше предлагалось сделать в контейнере `MenuFilter`.
-Кстати, код неудачной версии `MenuFilter` удобно взять за основу новой версии `changeProductTag`.
+Кстати, код неудачной версии контейнера `MenuFilter` удобно взять за основу новой версии `changeProductTag`.
 После убедись, что фильтры полностью работают.
 
-10. С Promise в JavaScript можно работать удобнее, если использовать async/await
+
+7. С Promise в JavaScript можно работать удобнее, если использовать async/await
 Добавь слово `async`  в заголовок `changeProductTag`:
 ```js
 export const changeProductTag = productTag => async (dispatch, getState, api) => { /* ... * / }
@@ -203,7 +178,8 @@ const productIds = await api.fetchProductIdsByTags(tags);
 await api.sendMetric('changeProductTag', 'used');
 ```
 
-11. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
+
+8. Запросы к API могут заканчиваться ошибками и их надо обрабатывать.
 Чтобы просимулировать это замени вызов `fetchProductIdsByTags` на `fetchProductIdsByTagsUnstable`.
 Нестабильный метод API падает в половине случаев.
 Теперь если несколько раз переключить фильтр, появится ошибка в консоли и бесконечный лоадер.
@@ -218,7 +194,8 @@ catch (error) {
 ```
 Теперь в случае возникновения ошибки фильтры будут сбрасываться.
 
-12. Функция `changeProductTag` сейчас довольно большая из нее стоит выделить часть,
+
+9. Функция `changeProductTag` сейчас довольно большая из нее стоит выделить часть,
 которая относится непосредственно к загрузке.
 Если сделать у этой функции сигнатуру как у thunk, то ее можно будет передавать в dispatch:
 ```js
